<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/fragment_current_weather.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/weather_home"
        android:scaleType="centerCrop"/>

    <!-- Blur Overlay for Background Image -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:alpha="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Display Current Weather Details -->
        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/humidity"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewWeatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_description"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"/>

        <!-- Use CardView for additional details -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <!-- Add other UI components as needed -->
            <!-- You can use icons, images, or more weather details here -->

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>

